Switching languages in Settings.

--- a/src/i18n/locales/en/message.json
+++ b/src/i18n/locales/en/message.json
@@ -5,5 +5,8 @@
       "news": "News"
     }
   },
-  "moera": "Moera"
+  "in": "in",
+  "moera": "Moera",
+  "posting-not-found": "Posting not found or cannot be displayed.",
+  "where-from": "Where it comes from?"
 }
