--- a/src/i18n/locales/ru/message.json
+++ b/src/i18n/locales/ru/message.json
@@ -5,5 +5,6 @@
       "news": "Новости"
     }
   },
-  "moera": "Moera"
+  "moera": "Moera",
+  "write-comment-here": "Напишите тут комментарий для {{mention}}..."
 }
