Integrated ICU message format for translations.

--- a/src/i18n/locales/en/message.json
+++ b/src/i18n/locales/en/message.json
@@ -25,5 +25,5 @@
   "support": "Support",
   "unsigned": "Unsigned",
   "where-from": "Where it comes from?",
-  "write-comment-here": "Write a comment to {{mention}} here..."
+  "write-comment-here": "Write a comment to {mention} here..."
 }
