Continuing to extract messages for translation.

--- a/src/i18n/locales/en/message.json
+++ b/src/i18n/locales/en/message.json
@@ -1,29 +1,56 @@
 {
-  "add-comment": "Add Comment",
-  "add-comments-need": "To add comments, you need to",
-  "cancel": "Cancel",
-  "change": "Change",
-  "change-date-time": "Change Date/Time",
-  "connect": "Connect",
-  "connecting": "Connecting",
-  "discussion-closed": "Discussion is closed",
-  "feed": {
-    "title": {
-      "timeline": "Timeline",
-      "news": "News"
+  "add-comment" : "Add Comment",
+  "add-comments-need" : "To add comments, you need to <0>{signup}</0> or <1>{connect}</1>",
+  "cancel" : "Cancel",
+  "change" : "Change",
+  "change-date-time" : "Change Date/Time",
+  "comment-edited-conflict" : "The comment was edited by somebody.",
+  "comments-disabled" : "Comments are disabled",
+  "comment-updated-at" : "updated",
+  "connect" : "Connect",
+  "connecting" : "Connecting",
+  "copy-link" : "Copy link",
+  "copy-text" : "Copy text",
+  "delete" : "Delete",
+  "delete-comment" : "Do you really want to delete the comment \"{heading}\"?",
+  "deleting" : "Deleting...",
+  "discussion-closed" : "Discussion is closed",
+  "edit-ellipsis" : "Edit...",
+  "feed" : {
+    "title" : {
+      "news" : "News",
+      "timeline" : "Timeline"
     }
   },
-  "forget": "Forget",
-  "forget-unfinished-comment": "Do you really want to forget the unfinished comment?",
-  "in": "in",
-  "moera": "Moera",
-  "not-connected-home": "Not connected to home",
-  "oppose": "Oppose",
-  "or": "or",
-  "posting-not-found": "Posting not found or cannot be displayed.",
-  "sign-up": "Sign Up",
-  "support": "Support",
-  "unsigned": "Unsigned",
-  "where-from": "Where it comes from?",
-  "write-comment-here": "Write a comment to {mention} here..."
+  "forget" : "Forget",
+  "forget-changes" : "Do you really want to forget the changes?",
+  "forget-unfinished-comment" : "Do you really want to forget the unfinished comment?",
+  "go-bottom" : "Go to the bottom",
+  "go-first-comment" : "Go to the first comment",
+  "go-last-comment" : "Go to the last comment",
+  "go-top" : "Go to the top",
+  "hide" : "Hide",
+  "in" : "in",
+  "load-all-comments" : "Load all comments",
+  "moera" : "Moera",
+  "not-connected-home" : "Not connected to home",
+  "oppose" : "Oppose",
+  "posting-not-found" : "Posting not found or cannot be displayed.",
+  "read-more" : "Read more...",
+  "reply" : "Reply",
+  "reply-prev-comment" : "Reply to previous comment",
+  "set-by-post-owner" : "set by post owner",
+  "share" : "Share",
+  "share-ellipsis" : "Share...",
+  "sign-up" : "Sign Up",
+  "support" : "Support",
+  "unhide" : "Unhide",
+  "unsigned" : "Unsigned",
+  "update" : "Update",
+  "view-comments" : "View comments",
+  "view-earlier-comments" : "View earlier comments",
+  "view-later-comments" : "View later comments",
+  "view-source" : "View source",
+  "where-from" : "Where it comes from?",
+  "write-comment-here" : "Write a comment to {mention} here..."
 }
