Continuing to extract messages for translation.

--- a/src/i18n/locales/en/message.json
+++ b/src/i18n/locales/en/message.json
@@ -1,11 +1,18 @@
 {
   "add-comment" : "Add Comment",
   "add-comments-need" : "To add comments, you need to <0>{signup}</0> or <1>{connect}</1>",
+  "allowed-oppose-reactions" : "Allowed \"Oppose\" reactions",
+  "allowed-support-reactions" : "Allowed \"Support\" reactions",
+  "auto-hide-comments" : "Automatically hide comments",
   "cancel" : "Cancel",
   "change" : "Change",
   "change-date-time" : "Change Date/Time",
+  "close" : "Close",
   "comment-edited-conflict" : "The comment was edited by somebody.",
+  "commenting-allowed-to" : "Commenting allowed to",
+  "comments" : "Comments",
   "comments-disabled" : "Comments are disabled",
+  "comments-visible-to" : "Comments visible to",
   "comment-updated-at" : "updated",
   "connect" : "Connect",
   "connecting" : "Connecting",
@@ -13,9 +20,14 @@
   "copy-text" : "Copy text",
   "delete" : "Delete",
   "delete-comment" : "Do you really want to delete the comment \"{heading}\"?",
+  "delete-draft" : "Delete draft",
   "deleting" : "Deleting...",
   "discussion-closed" : "Discussion is closed",
+  "drafts" : "Drafts",
   "edit-ellipsis" : "Edit...",
+  "edit-post-title" : "Edit Post",
+  "enable-oppose-reactions" : "Enable \"Oppose\" reactions",
+  "enable-reactions" : "Enable reactions",
   "feed" : {
     "title" : {
       "news" : "News",
@@ -25,6 +37,7 @@
   "forget" : "Forget",
   "forget-changes" : "Do you really want to forget the changes?",
   "forget-unfinished-comment" : "Do you really want to forget the unfinished comment?",
+  "formatting-hint" : "<0>Markdown:</0> see <1>cheatsheet</1> or <2>tutorial</2> to see how to do more. See also <3>emoji cheatsheet</3>.",
   "go-bottom" : "Go to the bottom",
   "go-first-comment" : "Go to the first comment",
   "go-last-comment" : "Go to the last comment",
@@ -33,24 +46,46 @@
   "in" : "in",
   "load-all-comments" : "Load all comments",
   "moera" : "Moera",
+  "new-post-item" : "New post",
+  "new-post-title" : "New Post",
+  "no" : "No",
   "not-connected-home" : "Not connected to home",
+  "no-text" : "(no text)",
+  "notify-about-update" : "Notify followers about the update",
+  "notify-followers" : "Notify followers",
   "oppose" : "Oppose",
+  "post-button" : "Post",
+  "post-edited-conflict" : "The post was edited by somebody.",
   "posting-not-found" : "Posting not found or cannot be displayed.",
+  "post-preview" : "Post Preview",
+  "preview" : "Preview",
+  "reactions" : "Reactions",
   "read-more" : "Read more...",
   "reply" : "Reply",
   "reply-prev-comment" : "Reply to previous comment",
+  "reset-to-default" : "Reset to default",
   "set-by-post-owner" : "set by post owner",
   "share" : "Share",
   "share-ellipsis" : "Share...",
+  "show-formatting-hint" : "Show formatting hint",
+  "show-list-reactions" : "Show the detailed list of reactions",
+  "show-number-reactions" : "Show the number of reactions",
   "sign-up" : "Sign Up",
   "support" : "Support",
+  "text-formatting" : "Text formatting",
+  "to-post" : "← Post",
+  "undo" : "Undo",
   "unhide" : "Unhide",
   "unsigned" : "Unsigned",
   "update" : "Update",
+  "update-description" : "Update description",
   "view-comments" : "View comments",
   "view-earlier-comments" : "View earlier comments",
   "view-later-comments" : "View later comments",
   "view-source" : "View source",
+  "want-delete-draft" : "Do you really want to delete the draft?",
+  "want-forget-changes" : "Do you really want to forget all changes?",
   "where-from" : "Where it comes from?",
-  "write-comment-here" : "Write a comment to {mention} here..."
+  "write-comment-here" : "Write a comment to {mention} here...",
+  "yes" : "Yes"
 }
