Continuing to extract messages for translation.

--- a/src/i18n/locales/en/message.json
+++ b/src/i18n/locales/en/message.json
@@ -14,7 +14,9 @@
   "comments-disabled" : "Comments are disabled",
   "comments-visible-to" : "Comments visible to",
   "comment-updated-at" : "updated",
+  "confirm-password" : "Confirm password",
   "connect" : "Connect",
+  "connect-home" : "Connect to Home",
   "connecting" : "Connecting",
   "copy-link" : "Copy link",
   "copy-text" : "Copy text",
@@ -24,6 +26,8 @@
   "deleting" : "Deleting...",
   "discussion-closed" : "Discussion is closed",
   "drafts" : "Drafts",
+  "draft-saved" : "Draft saved.",
+  "draft-saving" : "Saving...",
   "edit-ellipsis" : "Edit...",
   "edit-post-title" : "Edit Post",
   "enable-oppose-reactions" : "Enable \"Oppose\" reactions",
@@ -37,6 +41,8 @@
   "forget" : "Forget",
   "forget-changes" : "Do you really want to forget the changes?",
   "forget-unfinished-comment" : "Do you really want to forget the unfinished comment?",
+  "forgot-home-password" : "Forgot Home Password",
+  "forgot-password" : "Forgot password",
   "formatting-hint" : "<0>Markdown:</0> see <1>cheatsheet</1> or <2>tutorial</2> to see how to do more. See also <3>emoji cheatsheet</3>.",
   "go-bottom" : "Go to the bottom",
   "go-first-comment" : "Go to the first comment",
@@ -46,6 +52,10 @@
   "in" : "in",
   "load-all-comments" : "Load all comments",
   "moera" : "Moera",
+  "must-not-empty" : "Must not be empty",
+  "name-or-node-url" : "Name or node URL",
+  "name-or-node-url-not-valid" : "Name or node URL is not valid",
+  "new-password" : "New password",
   "new-post-item" : "New post",
   "new-post-title" : "New Post",
   "no" : "No",
@@ -54,6 +64,9 @@
   "notify-about-update" : "Notify followers about the update",
   "notify-followers" : "Notify followers",
   "oppose" : "Oppose",
+  "password" : "Password",
+  "password-not-set" : "Password not set yet",
+  "passwords-different" : "Passwords are different",
   "post-button" : "Post",
   "post-edited-conflict" : "The post was edited by somebody.",
   "posting-not-found" : "Posting not found or cannot be displayed.",
@@ -61,10 +74,19 @@
   "preview" : "Preview",
   "reactions" : "Reactions",
   "read-more" : "Read more...",
+  "received-mail" : "Received the mail already",
   "reply" : "Reply",
   "reply-prev-comment" : "Reply to previous comment",
+  "resend-mail" : "Send mail again",
+  "reset-password" : "Reset Password",
+  "reset-password-hint-instructions" : "A message was sent to your E-mail address <b>{emailHint}</b> with a secret code needed to reset the password. Please enter it in the field below.",
+  "reset-password-instructions" : "To reset the password, please enter the name or the URL of your home node.",
   "reset-to-default" : "Reset to default",
+  "retype-password" : "Please type the password again",
+  "secret-code" : "Secret code",
   "set-by-post-owner" : "set by post owner",
+  "set-home-password" : "Set Home Password",
+  "set-password-and-connect" : "Set Password & Connect",
   "share" : "Share",
   "share-ellipsis" : "Share...",
   "show-formatting-hint" : "Show formatting hint",
