Continuing to extract messages for translation.

--- a/src/i18n/locales/en/message.json
+++ b/src/i18n/locales/en/message.json
@@ -1,10 +1,15 @@
 {
   "add-comment" : "Add Comment",
   "add-comments-need" : "To add comments, you need to <0>{signup}</0> or <1>{connect}</1>",
+  "align" : "Align",
   "allowed-oppose-reactions" : "Allowed \"Oppose\" reactions",
   "allowed-support-reactions" : "Allowed \"Support\" reactions",
+  "alt-text" : "Alternative text",
+  "alt-text-button" : "Alt text",
   "auto-hide-comments" : "Automatically hide comments",
+  "bold" : "Bold",
   "cancel" : "Cancel",
+  "caption" : "Caption",
   "change" : "Change",
   "change-date-time" : "Change Date/Time",
   "close" : "Close",
@@ -14,17 +19,21 @@
   "comments-disabled" : "Comments are disabled",
   "comments-visible-to" : "Comments visible to",
   "comment-updated-at" : "updated",
+  "compress-images" : "Compress images",
   "confirm-password" : "Confirm password",
   "connect" : "Connect",
   "connect-home" : "Connect to Home",
   "connecting" : "Connecting",
+  "copy-image-from-internet" : "Copy Image From Internet",
   "copy-link" : "Copy link",
   "copy-text" : "Copy text",
   "delete" : "Delete",
   "delete-comment" : "Do you really want to delete the comment \"{heading}\"?",
   "delete-draft" : "Delete draft",
   "deleting" : "Deleting...",
+  "details" : "Details",
   "discussion-closed" : "Discussion is closed",
+  "downloading-image" : "Downloading image...",
   "drafts" : "Drafts",
   "draft-saved" : "Draft saved.",
   "draft-saving" : "Saving...",
@@ -50,10 +59,12 @@
   "edit-post-title" : "Edit Post",
   "enable-oppose-reactions" : "Enable \"Oppose\" reactions",
   "enable-reactions" : "Enable reactions",
+  "enter-text-here" : "Enter text here...",
   "feed-title" : {
     "news" : "News",
     "timeline" : "Timeline"
   },
+  "fold" : "Fold",
   "forget" : "Forget",
   "forget-changes" : "Do you really want to forget the changes?",
   "forget-unfinished-comment" : "Do you really want to forget the unfinished comment?",
@@ -64,9 +75,29 @@
   "go-first-comment" : "Go to the first comment",
   "go-last-comment" : "Go to the last comment",
   "go-top" : "Go to the top",
+  "height" : "Height",
   "hide" : "Hide",
+  "image" : "Image",
+  "image-alignment" : {
+    "center" : "Center",
+    "left" : "Left",
+    "left-wrap" : "Left, wrapping text",
+    "right" : "Right",
+    "right-wrap" : "Right, wrapping text"
+  },
+  "image-size" : {
+    "custom" : "Custom",
+    "full" : "Full",
+    "large" : "Large",
+    "medium" : "Medium",
+    "small" : "Small",
+    "tiny" : "Tiny"
+  },
   "in" : "in",
+  "italic" : "Italic",
+  "link" : "Link",
   "load-all-comments" : "Load all comments",
+  "mention" : "Mention",
   "moera" : "Moera",
   "must-not-empty" : "Must not be empty",
   "name-or-node-url" : "Name or node URL",
@@ -79,6 +110,7 @@
   "no-text" : "(no text)",
   "notify-about-update" : "Notify followers about the update",
   "notify-followers" : "Notify followers",
+  "ok" : "OK",
   "oppose" : "Oppose",
   "password" : "Password",
   "password-not-set" : "Password not set yet",
@@ -89,6 +121,7 @@
   "post-preview" : "Post Preview",
   "preview" : "Preview",
   "provider-setting" : "(provider setting)",
+  "quote" : "Quote",
   "reactions" : "Reactions",
   "read-more" : "Read more...",
   "received-mail" : "Received the mail already",
@@ -101,6 +134,7 @@
   "reset-to-default" : "Reset to default",
   "retype-password" : "Please type the password again",
   "secret-code" : "Secret code",
+  "set-as-default" : "Set as default",
   "set-by-post-owner" : "set by post owner",
   "set-home-password" : "Set Home Password",
   "set-password-and-connect" : "Set Password & Connect",
@@ -110,14 +144,23 @@
   "show-list-reactions" : "Show the detailed list of reactions",
   "show-number-reactions" : "Show the number of reactions",
   "sign-up" : "Sign Up",
+  "size" : "Size",
+  "spoiler" : "Spoiler",
+  "strikeout" : "Strikeout",
+  "summary" : "Summary",
   "support" : "Support",
   "text-formatting" : "Text formatting",
+  "tooltip" : "Tooltip",
   "to-post" : "← Post",
   "undo" : "Undo",
   "unhide" : "Unhide",
   "unsigned" : "Unsigned",
   "update" : "Update",
   "update-description" : "Update description",
+  "uploading-files" : "Uploading {loadedFiles} of {totalFiles} {progress}% ...",
+  "upload-or-copy-images" : "<0>Upload images</0> or <1>Copy image</1>",
+  "upload-or-copy-or-drop-images" : "<0>Upload images</0> or <1>Copy image</1> or drop them here",
+  "url" : "URL",
   "view-comments" : "View comments",
   "view-earlier-comments" : "View earlier comments",
   "view-later-comments" : "View later comments",
@@ -125,6 +168,7 @@
   "want-delete-draft" : "Do you really want to delete the draft?",
   "want-forget-changes" : "Do you really want to forget all changes?",
   "where-from" : "Where it comes from?",
+  "width" : "Width",
   "write-comment-here" : "Write a comment to {mention} here...",
   "yes" : "Yes"
 }
