--- a/src/i18n/locales/ru/message.json
+++ b/src/i18n/locales/ru/message.json
@@ -1,9 +1,8 @@
 {
-  "feed" : {
-    "title" : {
-      "news" : "Новости",
-      "timeline" : "Хроника"
-    }
+  "cancel" : "Отмена",
+  "feed-title" : {
+    "news" : "Новости",
+    "timeline" : "Хроника"
   },
   "moera" : "Moera",
   "write-comment-here" : "Напишите тут комментарий для {mention}..."
