Continuing to extract messages for translation.

--- a/src/i18n/locales/en/message.json
+++ b/src/i18n/locales/en/message.json
@@ -1,17 +1,22 @@
 {
   "add-comment" : "Add Comment",
   "add-comments-need" : "To add comments, you need to <0>{signup}</0> or <1>{connect}</1>",
+  "additional" : "Additional",
+  "alert-text" : "Alert text",
   "align" : "Align",
   "allowed-oppose-reactions" : "Allowed \"Oppose\" reactions",
   "allowed-support-reactions" : "Allowed \"Support\" reactions",
   "alt-text" : "Alternative text",
   "alt-text-button" : "Alt text",
   "auto-hide-comments" : "Automatically hide comments",
+  "avatar" : "Avatar",
+  "avatar-placeholder" : "Avatar placeholder",
   "bold" : "Bold",
   "cancel" : "Cancel",
   "caption" : "Caption",
   "change" : "Change",
   "change-date-time" : "Change Date/Time",
+  "clipboard-contains-formatting" : "The clipboard contains text with formatting. Do you want to paste the text with formatting tags?",
   "close" : "Close",
   "comment-edited-conflict" : "The comment was edited by somebody.",
   "commenting-allowed-to" : "Commenting allowed to",
@@ -33,6 +38,8 @@
   "deleting" : "Deleting...",
   "details" : "Details",
   "discussion-closed" : "Discussion is closed",
+  "donate" : "Donate",
+  "dont-ask-next-time" : "Don't ask next time",
   "downloading-image" : "Downloading image...",
   "drafts" : "Drafts",
   "draft-saved" : "Draft saved.",
@@ -71,12 +78,17 @@
   "forgot-home-password" : "Forgot Home Password",
   "forgot-password" : "Forgot password",
   "formatting-hint" : "<0>Markdown:</0> see <1>cheatsheet</1> or <2>tutorial</2> to see how to do more. See also <3>emoji cheatsheet</3>.",
+  "from-computer" : "From Computer",
+  "from-device" : "From Device",
+  "from-internet" : "From Internet",
   "go-bottom" : "Go to the bottom",
   "go-first-comment" : "Go to the first comment",
   "go-last-comment" : "Go to the last comment",
   "go-top" : "Go to the top",
   "height" : "Height",
   "hide" : "Hide",
+  "hide-my-subscription" : "Hide my subscription",
+  "hide-subscription-to-me" : "Hide subscription to me",
   "image" : "Image",
   "image-alignment" : {
     "center" : "Center",
@@ -94,35 +106,89 @@
     "tiny" : "Tiny"
   },
   "in" : "in",
+  "insert-image" : "Insert an image",
+  "insert-link" : "Insert a link",
+  "insert-mention" : "Insert a mention",
   "italic" : "Italic",
   "link" : "Link",
   "load-all-comments" : "Load all comments",
   "mention" : "Mention",
   "moera" : "Moera",
   "must-not-empty" : "Must not be empty",
+  "mutually-subscribed" : "Mutually subscribed",
+  "name-help" : "The name must be 4 - 120 characters long. You may use any Unicode character (including non-Latin alphabets), except whitespace and punctuation. Only this punctuation is allowed:",
   "name-or-node-url" : "Name or node URL",
   "name-or-node-url-not-valid" : "Name or node URL is not valid",
   "new-password" : "New password",
   "new-post-item" : "New post",
   "new-post-title" : "New Post",
   "no" : "No",
+  "no-actions" : "No actions",
   "not-connected-home" : "Not connected to home",
   "no-text" : "(no text)",
   "notify-about-update" : "Notify followers about the update",
   "notify-followers" : "Notify followers",
   "ok" : "OK",
+  "only-selected-allowed" : "Only selected are allowed",
+  "only-selected-allowed-star-preferred" : "Only selected are allowed, marked by <0/> are preferred",
   "oppose" : "Oppose",
   "password" : "Password",
   "password-not-set" : "Password not set yet",
   "passwords-different" : "Passwords are different",
+  "paste-with-formatting" : "Paste text with formatting",
   "post-button" : "Post",
   "post-edited-conflict" : "The post was edited by somebody.",
   "posting-not-found" : "Posting not found or cannot be displayed.",
   "post-preview" : "Post Preview",
+  "preserve-formatting" : "Preserve formatting",
   "preview" : "Preview",
+  "principal-title" : {
+    "admin" : "Admin",
+    "author" : "Author",
+    "nobody" : "Nobody",
+    "only-me" : "Only me",
+    "public" : "Everybody",
+    "signed" : "Signed"
+  },
   "provider-setting" : "(provider setting)",
   "quote" : "Quote",
   "reactions" : "Reactions",
+  "reaction-title" : {
+    "absurd" : "Absurd",
+    "angry" : "Angry",
+    "arrogant" : "Arrogant",
+    "bebe" : "Be-be",
+    "boring" : "Boring",
+    "brilliant" : "Brilliant",
+    "congrats" : "Congrats",
+    "cry" : "Cry",
+    "damn" : "Damn",
+    "dirt" : "Dirt",
+    "disagree" : "Disagree",
+    "disgust" : "Disgust",
+    "dislike" : "Dislike",
+    "enjoy" : "Enjoy",
+    "facepalm" : "Facepalm",
+    "get-well" : "Get well",
+    "good-trip" : "Good trip",
+    "haha" : "Ha-ha",
+    "hmm" : "Hmm",
+    "hope" : "Hope",
+    "hostile" : "Hostile",
+    "hot" : "Hot",
+    "hug" : "Hug",
+    "hurt" : "Hurt",
+    "keep-calm" : "Keep calm",
+    "like" : "Like",
+    "lol" : "LOL",
+    "love" : "Love",
+    "popcorn" : "Popcorn",
+    "sad" : "Sad",
+    "super" : "Super",
+    "sweet" : "Sweet",
+    "too-long" : "Too long",
+    "wow" : "Wow"
+  },
   "read-more" : "Read more...",
   "received-mail" : "Received the mail already",
   "reply" : "Reply",
@@ -134,6 +200,8 @@
   "reset-to-default" : "Reset to default",
   "retype-password" : "Please type the password again",
   "secret-code" : "Secret code",
+  "select-all" : "Select all",
+  "selected-preferred" : "Selected are preferred",
   "set-as-default" : "Set as default",
   "set-by-post-owner" : "set by post owner",
   "set-home-password" : "Set Home Password",
@@ -143,24 +211,38 @@
   "show-formatting-hint" : "Show formatting hint",
   "show-list-reactions" : "Show the detailed list of reactions",
   "show-number-reactions" : "Show the number of reactions",
+  "signature-correct" : "Signature is correct",
+  "signature-incorrect" : "Signature is incorrect",
+  "signature-verification-in-progress" : "Signature verification in progress",
   "sign-up" : "Sign Up",
   "size" : "Size",
   "spoiler" : "Spoiler",
   "strikeout" : "Strikeout",
+  "subscribe-back" : "Subscribe back",
+  "subscribed" : "Subscribed",
+  "subscribed-to-me" : "Subscribed to me",
   "summary" : "Summary",
   "support" : "Support",
+  "text" : "Text",
   "text-formatting" : "Text formatting",
+  "text-only" : "Text only",
   "tooltip" : "Tooltip",
   "to-post" : "← Post",
   "undo" : "Undo",
   "unhide" : "Unhide",
+  "unhide-my-subscription" : "Unhide my subscription",
+  "unhide-subscription-to-me" : "Unhide subscription to me",
+  "unselect-all" : "Unselect all",
   "unsigned" : "Unsigned",
+  "unsubscribe" : "Unsubscribe",
   "update" : "Update",
   "update-description" : "Update description",
+  "uploading-file" : "Uploading ${progress}% ...",
   "uploading-files" : "Uploading {loadedFiles} of {totalFiles} {progress}% ...",
   "upload-or-copy-images" : "<0>Upload images</0> or <1>Copy image</1>",
   "upload-or-copy-or-drop-images" : "<0>Upload images</0> or <1>Copy image</1> or drop them here",
   "url" : "URL",
+  "verify-signature" : "Verify signature",
   "view-comments" : "View comments",
   "view-earlier-comments" : "View earlier comments",
   "view-later-comments" : "View later comments",
