--- a/src/i18n/locales/ru/message.json
+++ b/src/i18n/locales/ru/message.json
@@ -5,5 +5,41 @@
     "timeline" : "Хроника"
   },
   "moera" : "Moera",
+  "reaction-title" : {
+    "absurd" : "Абсурд",
+    "angry" : "Бесит",
+    "arrogant" : "Высокомерно",
+    "bebe" : "Бе-бе",
+    "boring" : "Скучно",
+    "brilliant" : "Великолепно",
+    "congrats" : "Поздравляю",
+    "cry" : "Реву",
+    "damn" : "Чёрт",
+    "dirt" : "Грязь",
+    "disagree" : "Спорно",
+    "disgust" : "Противно",
+    "dislike" : "Не нравится",
+    "enjoy" : "Развлекайся",
+    "facepalm" : "Фейспалм",
+    "get-well" : "Выздоравливай",
+    "good-trip" : "Хорошей поездки",
+    "haha" : "Ха-ха",
+    "hmm" : "Хмм",
+    "hope" : "Надеюсь",
+    "hostile" : "Ненавижу",
+    "hot" : "Огонь",
+    "hug" : "Обнимаю",
+    "hurt" : "Разочарование",
+    "keep-calm" : "Спокойствия",
+    "like" : "Нравится",
+    "lol" : "Ржу",
+    "love" : "Люблю",
+    "popcorn" : "Попкорн",
+    "sad" : "Грустно",
+    "super" : "Супер",
+    "sweet" : "Очаровательно",
+    "too-long" : "Длинно",
+    "wow" : "Ого"
+  },
   "write-comment-here" : "Напишите тут комментарий для {mention}..."
 }
