Continuing to extract messages for translation.

--- a/src/i18n/locales/en/message.json
+++ b/src/i18n/locales/en/message.json
@@ -12,6 +12,7 @@
   "avatar" : "Avatar",
   "avatar-placeholder" : "Avatar placeholder",
   "bold" : "Bold",
+  "bottom" : "Bottom",
   "cancel" : "Cancel",
   "caption" : "Caption",
   "change" : "Change",
@@ -29,16 +30,22 @@
   "connect" : "Connect",
   "connect-home" : "Connect to Home",
   "connecting" : "Connecting",
+  "continue-reading" : "Continue Reading →",
   "copy-image-from-internet" : "Copy Image From Internet",
   "copy-link" : "Copy link",
   "copy-text" : "Copy text",
+  "copy-with-formatting" : "Copy text with formatting",
+  "count-more" : "{count} more",
+  "count-new" : "{count} new",
   "delete" : "Delete",
   "delete-comment" : "Do you really want to delete the comment \"{heading}\"?",
   "delete-draft" : "Delete draft",
   "deleting" : "Deleting...",
-  "details" : "Details",
+  "description" : "Description",
   "discussion-closed" : "Discussion is closed",
   "donate" : "Donate",
+  "donate-to-recipient" : "Donate to <0>{recipientName}</0>",
+  "donations-android-prohibited" : "Donations feature is prohibited in Android apps downloaded from Google Play according to <0>Google Play Payments Policy</0>.<1/><2/>Please use Moera web client for this.",
   "dont-ask-next-time" : "Don't ask next time",
   "downloading-image" : "Downloading image...",
   "drafts" : "Drafts",
@@ -62,7 +69,11 @@
       "sec" : "seconds"
     }
   },
+  "edit" : "Edit",
+  "edit-comment" : "Edit Comment",
   "edit-ellipsis" : "Edit...",
+  "edit-image" : "Edit Image",
+  "edit-link-preview" : "Edit link preview",
   "edit-post-title" : "Edit Post",
   "enable-oppose-reactions" : "Enable \"Oppose\" reactions",
   "enable-reactions" : "Enable reactions",
@@ -84,6 +95,7 @@
   "go-bottom" : "Go to the bottom",
   "go-first-comment" : "Go to the first comment",
   "go-last-comment" : "Go to the last comment",
+  "go-to" : "Go to...",
   "go-top" : "Go to the top",
   "height" : "Height",
   "hide" : "Hide",
@@ -111,9 +123,14 @@
   "insert-mention" : "Insert a mention",
   "italic" : "Italic",
   "link" : "Link",
+  "links" : "Links",
   "load-all-comments" : "Load all comments",
+  "loading-preview" : "Loading preview",
+  "load-newer-posts" : "Load newer posts",
+  "load-older-posts" : "Load older posts",
   "mention" : "Mention",
   "moera" : "Moera",
+  "more-links" : "{count} {count, plural, one {link} other {links}}",
   "must-not-empty" : "Must not be empty",
   "mutually-subscribed" : "Mutually subscribed",
   "name-help" : "The name must be 4 - 120 characters long. You may use any Unicode character (including non-Latin alphabets), except whitespace and punctuation. Only this punctuation is allowed:",
@@ -126,6 +143,7 @@
   "no-actions" : "No actions",
   "not-connected-home" : "Not connected to home",
   "no-text" : "(no text)",
+  "nothing-yet" : "Nothing yet.",
   "notify-about-update" : "Notify followers about the update",
   "notify-followers" : "Notify followers",
   "ok" : "OK",
@@ -150,8 +168,10 @@
     "public" : "Everybody",
     "signed" : "Signed"
   },
+  "profile" : "Profile",
   "provider-setting" : "(provider setting)",
   "quote" : "Quote",
+  "reached-bottom" : "You've reached the bottom",
   "reactions" : "Reactions",
   "reaction-title" : {
     "absurd" : "Absurd",
@@ -224,9 +244,12 @@
   "summary" : "Summary",
   "support" : "Support",
   "text" : "Text",
+  "text-contains-formatting" : "The text contains formatting. Do you want to copy the text with formatting tags?",
   "text-formatting" : "Text formatting",
   "text-only" : "Text only",
+  "title" : "Title",
   "tooltip" : "Tooltip",
+  "top" : "Top",
   "to-post" : "← Post",
   "undo" : "Undo",
   "unhide" : "Unhide",
@@ -245,6 +268,8 @@
   "verify-signature" : "Verify signature",
   "view-comments" : "View comments",
   "view-earlier-comments" : "View earlier comments",
+  "view-images-grid" : "View images as grid",
+  "view-images-list" : "View images as list",
   "view-later-comments" : "View later comments",
   "view-source" : "View source",
   "want-delete-draft" : "Do you really want to delete the draft?",
