Extracted translations for instants, including summaries.

--- a/src/i18n/locales/en/message.json
+++ b/src/i18n/locales/en/message.json
@@ -121,13 +121,58 @@
   "insert-image" : "Insert an image",
   "insert-link" : "Insert a link",
   "insert-mention" : "Insert a mention",
+  "instants" : "Notifications",
+  "instant-summary" : {
+    "and" : "and",
+    "and-others" : "and {count} {count, plural, one {other} other {others}}",
+    "node-blog" : "{node} blog",
+    "node-post" : "{node} post",
+    "opposed" : "opposed",
+    "reason" : {
+      "comment" : "you commented",
+      "mention" : "you have been mentioned in",
+      "user" : "you subscribed to"
+    },
+    "story" : {
+      "comment-added" : "{comments} commented on your post {heading}",
+      "comment-media-reaction-added" : "{reactions} a media in your comment {heading} on {posting}",
+      "comment-media-reaction-failed" : "Failed to sign a reaction to a media in {commentNode} comment {commentHeading} to {postingNode} post {postingHeading}",
+      "comment-post-task-failed" : "Failed to add a comment to {node} post {heading}",
+      "comment-reaction-added" : "{reactions} your comment {heading} on {posting}",
+      "comment-reaction-task-failed" : "Failed to sign a reaction to {commentNode} comment {commentHeading} to {postingNode} post {postingHeading}",
+      "comment-update-task-failed" : "Failed to sign the comment {commentHeading} to {node} post {postingHeading}",
+      "mention-comment" : "{node} mentioned you in a comment {commentHeading} on {posting} {postingHeading}",
+      "mention-posting" : "{node} mentioned you in a post ${heading}",
+      "posting-media-reaction-added" : "{reactions} a media in your post {heading} in {node}",
+      "posting-media-reaction-failed" : "Failed to sign a reaction to a media in {node} post {heading}",
+      "posting-post-task-failed" : "Failed to add your post to {node} blog",
+      "posting-reaction-task-failed" : "Failed to sign a reaction to {node} post {heading}",
+      "posting-subscribe-task-failed" : "Failed to subscribe to comments to {node} post {heading}",
+      "posting-updated" : "{node} updated their post {heading}",
+      "posting-update-task-failed" : "Failed to sign your post {heading} in {node} blog",
+      "reaction-added" : "{reactions} your post {heading}",
+      "remote-comment-added" : "{comments} commented on {posting} {reason} {heading}",
+      "reply-comment" : "{replies} replied to your comment {heading} on {posting}",
+      "subscriber-added" : "{node} subscribed to your {feed}",
+      "subscriber-deleted" : "{node} unsubscribed from your {feed}"
+    },
+    "supported" : "supported",
+    "their-blog" : "their blog",
+    "their-post" : "their post",
+    "your-blog" : "your blog",
+    "your-post" : "your post"
+  },
   "italic" : "Italic",
   "link" : "Link",
   "links" : "Links",
   "load-all-comments" : "Load all comments",
   "loading-preview" : "Loading preview",
+  "load-more" : "Load more...",
   "load-newer-posts" : "Load newer posts",
   "load-older-posts" : "Load older posts",
+  "mark-all-read" : "Mark All as Read",
+  "mark-read" : "Mark as Read",
+  "mark-unread" : "Mark as Unread",
   "mention" : "Mention",
   "moera" : "Moera",
   "more-links" : "{count} {count, plural, one {link} other {links}}",
